feat: search logs endpoint
